force-app/main/default/objects/QuestionAnswered__e/QuestionAnswered__e.object-meta.xml
<CustomObject>
    <label>Question Answered Event</label>
    <pluralLabel>Question Answered Events</pluralLabel>
</CustomObject>