force-app/main/default/objects/QuestionAnswered__e/fields/Player_Id__c.field-meta.xml
<CustomField>
    <fullName>Player_Id__c</fullName>
    <label>Player Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>