force-app/main/default/objects/QuestionAnswered__e/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>