force-app/main/default/objects/QuestionAnswered__e/fields/Round_Id__c.field-meta.xml
<CustomField>
    <fullName>Round_Id__c</fullName>
    <label>Round Id</label>
    <type>Text</type>
    <length>40</length>
</CustomField>