force-app/main/default/objects/QuestionAnswered__e/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>